fixed header on smaller screen

--- a/CSS/general.css
+++ b/CSS/general.css
@@ -1,6 +1,5 @@
 body {
     margin: auto 0;
-    font-family: Arial;
     background-color: #dddbd2;
 }
 
@@ -9,24 +8,13 @@ body {
     display: flex;
     align-items: flex-end;
     justify-content: center;
-    height: 50vh;
+    max-height: 50vh;
     background-color: white;
 }
 
-@media only screen and (max-width: 600px) {
-    .container {
-        height: 20vh;
-    }
-}
-
 .cover {
-    width: 73vh;
-}
-
-@media only screen and (max-width: 600px) {
-    .cover {
-        width: 30vh;
-    }
+    max-width: 100%;
+    max-height: 100%;
 }
 
 /*NAV*/
@@ -52,11 +40,10 @@ body {
     color: rgba(100, 100, 100, 0.541);
 }
 
-/*reduce text size of the nav bar on small screen*/
-@media only screen and (max-width: 600px) {
+/*change text size of the nav bar on small screen*/
+@media screen and (max-width: 600px) {
     .main-nav {
-        font-size: 1em;
-        padding: 0;
+        font-size: 16px;
     }
 }
 
@@ -104,8 +91,9 @@ footer>p {
 }
 
 /* make all the columns on top on each other on small screen*/
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
     .row {
+        display: flex;
         flex-direction: column;
     }
 }
@@ -121,7 +109,7 @@ footer>p {
 }
 
 
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
     .column {
         max-width: 100%;
     }
@@ -162,9 +150,9 @@ p {
     text-align: justify
 }
 
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
     p {
-        font-size: 18px;
+        font-size: 16px;
         margin: auto;
     }
 }
